--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ src/components/scrap/helper.css
 src/components/scrap/rehkS.jsx
 src/components/styles/Global.jsx
 src/helpers/saveEmail.js
+src/.null
