--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,4 @@
-src/App.css
-src/App.js
-src/App.test.js
-src/index.css
-src/index.js
-src/logo.svg
-src/reportWebVitals.js
-src/setupTests.js
-src/components/Cta.jsx
-src/components/Description.jsx
-src/components/Footer.jsx
-src/components/Margic.jsx
-src/components/Modal.jsx
-src/components/NavBar.jsx
-src/components/Service.jsx
-src/components/Services.jsx
-src/components/scrap/helper.css
-src/components/scrap/rehkS.jsx
-src/components/styles/Global.jsx
-src/helpers/saveEmail.js
-src/.null
+src/
+day5/images/
+day5/menu-item.jpeg
+day5/logo.svg
